# Fuzzy-Control-System

./: CMakeLists.txt  README.md
ZAD1/: CMakeLists.txt
ZAD1/src/: CMakeLists.txt  test.cpp
ZAD1/src/domain/: domain.cpp  domain.hpp  domain_element.cpp  domain_element.hpp
ZAD1/test/: CMakeLists.txt  DomainTest.cpp  operations_test.cpp
src/: CMakeLists.txt  main.cpp  test.cpp
src/control/: acc_rule_database.hpp  conclusion.hpp  consequent.hpp  defuzzifier.hpp  fuzzy_control_system.hpp  fuzzy_relation.hpp  operand.cpp  operand.hpp  rule.hpp  steer_rule_database.hpp
src/domain/: domain.cpp  domain.hpp  domain_element.cpp  domain_element.hpp
src/function/: unary_function.hpp  unitary_function.hpp
src/fuzzy/: fuzzy_set.hpp  relation.hpp
src/fuzzy_set/: fuzzy_set.hpp
src/operation/: operation.hpp
test/: CMakeLists.txt  DomainTest.cpp  fuzzy_set_test.cpp  operations_test.cpp  relation_test.cpp
